--- a/Useradd.yml
+++ b/Useradd.yml
@@ -1,1 +1,8 @@
-
+- hosts: all
+  gather_facts: false
+  tasks:
+     - name: user add
+#      shell: 'useradd test'
+       user:
+        name: test1
+        state: present
